<resources>

    <string name="app_name">Zadruga</string>

    <string name="changeLanguage">Choose language...</string>
    <string name="type">*Type of user</string>
    <string name="student">Student</string>
    <string name="employer">Employer</string>
    <string name="serbianLanguage">Serbian</string>
    <string name="notAllFull">You did not fill all fields!</string>
    <string name="englishLanguage">English</string>
    <string name="login">LOGIN</string>
    <string name="question">Do not have an account?</string>
    <string name="signup">SIGN UP</string>
    <string name="language">Change language</string>
    <string name="DialogAdMess">Why do you want to report this ad?</string>
    <string name="DialogCommentMess">Why do you want to report this comment?</string>
    <string name="dialogAd">Report an ad</string>
    <string name="dialogComment">Report a comment</string>
    <string name="logName">Username</string>
    <string name="logPassword">Password</string>
    <string name="restorePassword">Change your password</string>
    <string name="signName">* Name:</string>
    <string name="signNamePlaceholder">Name</string>
    <string name="signSurname">* Surname:</string>
    <string name="signSurnamePlaceholder">Surname</string>
    <string name="gender">Gender</string>
    <string name="genderM">M</string>
    <string name="genderF">F</string>
    <string name="email">* Email</string>
    <string name="emailPlaceholder">Email</string>
    <string name="companyPlaceholder">Company</string>
    <string name="username">* Username</string>
    <string name="usernamePlaceholder">Username</string>
    <string name="mobile">Mobile</string>
    <string name="mobilePlaceholder">+381</string>
    <string name="signPassword">* Password</string>
    <string name="signPasswordPlaceholder">Password</string>
    <string name="goLog">Already have an account? Login</string>
    <string name="newPassword">New password</string>
    <string name="newPasswordConfirmation">Confirm new password</string>
    <string name="resetPassword">Change password</string>
    <string name="feed">Feed</string>
    <string name="logout">Log out</string>
    <string name="jobListStudent">Job History</string>
    <string name="recommendationsStudent">Recommended</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="forYouStudent">For You</string>
    <string name="newAd">New Ad</string>
    <string name="myAds">My ads</string>
    <string name="Ads">Ads</string>
    <string name="editProfile">Edit Profile</string>
    <string name="infoStudent">Information: </string>
    <string name="facultyStudent">University: </string>
    <string name="achievements">Achievements</string>
    <string name="badges">Badges: </string>
    <string name="saveChanges">Save changes</string>
    <string name="phoneStudent">Phone: </string>
    <string name="adTitle">Title</string>
    <string name="adTitlePlaceholder">Title</string>
    <string name="headNewAd">Add new ad</string>
    <string name="adDescriptionPlaceholder">Description</string>
    <string name="adPeopleNeeded">Number of needed employees</string>
    <string name="adFee">Fee</string>
    <string name="adFeeFrom">From:</string>
    <string name="adFeePlaceholder">0</string>
    <string name="adFeeTo">To:</string>
    <string name="newAdAdd">Add</string>
    <string name="newAdCancel">Cancel</string>
    <string name="adItemFee">Fee:</string>
    <string name="adLocation">Location</string>
    <string name="adApply">Apply</string>
    <string name="adItemReadMore">Read more</string>
    <string name="ratingStudent">Rate</string>
    <string name="companyEmployer">Company:</string>
    <string name="commentsGrades">Comments:</string>
    <string name="commentsGradesPlaceholder">Type your comment here...</string>
    <string name="gradeF">Grade F</string>
    <string name="gradeD">Grade D</string>
    <string name="gradeC">Grade C</string>
    <string name="gradeB">Grade B</string>
    <string name="gradeA">Grade A</string>
    <string name="filterAds">Filters</string>
    <string name="filterCategories">Categories</string>
    <string name="filterPromoter">Promoter</string>
    <string name="filterInterviewer">Interviewer</string>
    <string name="filterHostess">Hostess</string>
    <string name="filterWaiter">Waiter</string>
    <string name="filterCollectionOperations">Collection operations</string>
    <string name="filterKitchenSupportStaff">Kitchen support staff</string>
    <string name="filterLighterPhysicalJobs">Lighter physical jobs</string>
    <string name="filterHeavierPhysicalJobs">Heavier physical jobs</string>
    <string name="filterFeeFrom">From</string>
    <string name="filterFeeTo">To</string>
    <string-array name="locations">
        <item>Belgrade</item>
        <item>Novi Sad</item>
        <item>Niš</item>
        <item>Kragujevac</item>
        <item>Leskovac</item>
        <item>Subotica</item>
        <item>Kruševac</item>
        <item>Kraljevo</item>
        <item>Smederevo</item>
        <item>Valjevo</item>
        <item>Vranje</item>
        <item>Pirot</item>
    </string-array>
    <string name="sort">Sort</string>
    <string name="filter">Apply filters</string>
    <string name="toastHeader">Something is missing</string>
    <string-array name="choices">
        <item>Hostess</item>
        <item>Promoter</item>
        <item>Kitchen support staff</item>
        <item>Interviewer</item>
        <item>Collection operations</item>
        <item>Waiter</item>
        <item>Lighter physical jobs</item>
        <item>Heavier physical jobs</item>
    </string-array>
    <string name="category">Choose</string>
    <string name="dialogMultipleChoiceTitle">Choose categories</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnApply">Apply</string>
    <string name="btnNeutral">Clean all</string>
    <string name="missingData">Please fill all fields</string>
    <string name="headerJobs">Work history</string>
    <string name="headerMyAds">Ads you have published</string>
    <string name="recommend">Recommended for You</string>
    <string name="profileStudent">Profile</string>
    <string name="notificationsStudent">Notifications</string>
    <string name="daysAgo">%1d days ago</string>
    <string name="reports">Reports</string>
    <string name="dayAgo">%1d day ago</string>
    <string name="hoursAgo">%1d hours ago</string>
    <string name="lessThen6hourAgo">%1d hour ago</string>
    <string name="newPass">New password</string>
    <string name="newPassConf">Confirm new password</string>
    <string name="reset">Reset password</string>
    <string name="submitChanges">Submit Changes</string>
    <string name="editPreferences">Edit preferences</string>
    <string name="dateHint">Date of Birth</string>
    <string name="done">Done</string>
    <string name="jobAdvertisement">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum enim gravida porttitor sodales. Phasellus lobortis efficitur fringilla. Suspendisse a efficitur lectus, id dapibus purus.
    </string>
    <string name="changePass">Change password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="writeMessageHint">Write a message</string>
    <string name="bio_hint">Enter bio...</string>
    <string name="rating_intro_format1">We\'ve seen you\'ve collaborated with %1$s.</string>
    <string name="rating_intro_format2">How would you rate your experience with %1$s?</string>
    <string name="submitRating">Submit</string>
    <string name="accepted">You are accepted</string>
    <string name="declined">You are declined</string>
    <string name="tagged">User %1$s has tagged you</string>
    <string name="successfulNewAd">You created new ad successfully!</string>
    <string name="badRequestNewAd">Please fill in all the required fields!</string>
    <string name="serverErrorNewAd">There was a problem with server connection!</string>
    <string name="successfulLocation">Getting locations was successful!</string>
    <string name="badRequestLocation">Please click in a location field!</string>
    <string name="editName">*Name</string>
    <string name="editSurname">*Surname</string>
    <string name="editBio">Edit bio...</string>
    <string name="people">People</string>
    <string name="descriptionOfAd">Describe your job offer in a few sentences...</string>
    <string name="adApplyChanges">Apply changes</string>
    <string name="questionAd">Ask a question...</string>
    <string name="applicants">Applicants</string>
    <string name="preferences">Choose preferences</string>
    <string name="AdNotFound">Error! Ad Not Found!</string>
    <string name="adComment">User %1$s has left a comment</string>
    <string name="notifRating">User %1$s rated you</string>
    <string name="notifChat">User %1$s has sent you a message</string>
    <string name="reportedHeading">Reports</string>
    <string name="deleteReport">Delete report</string>
    <string name="reportTitle">User %1$s has reported user %2$s</string>
    <string name="rating">Rating %1$s:</string>
    <string name="notifApplied">User %1$s applied for ad</string>
    <string name="badgeDialog">More about this badge</string>
    <string name="ban">Ban user</string>
    <string name="chat">Chat</string>
    <string name="confirmSelection">Confirm selection</string>
    <string name="info">About</string>
    <string name="wrongPass">Wrong password</string>
    <string name="alreadyBanned">Already banned</string>
    <string name="logInfo">Invalid data</string>
    <string name="serverError">Server error</string>
    <string name="peopleJob">People</string>
    <string name="dialogHint">Why do you want to report this..</string>
    <string name="clearFilters">Clear all filters</string>
    <string name="noMessages">No messages yet!</string>
    <string name="alreadyRated">Already rated</string>
    <string name="chats">Chats</string>
</resources>