<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/employerFeed"
        android:icon="@drawable/ic_ads"
        android:title="@string/feed" />
    <item
        android:id="@+id/employerNotifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />
    <item
        android:id="@+id/employerNewAd"
        android:icon="@drawable/ic_new_ad"
        android:title="@string/newAd" />
    <item
        android:id="@+id/employersAds"
        android:icon="@drawable/ic_employer_ads"
        android:title="@string/myAds" />
    <item
        android:id="@+id/employerProfile"
        android:icon="@drawable/ic_profile_employer"
        android:title="@string/profile" />
</menu>