<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.MainActivity"
    tools:viewBindingIgnore="true">

    <ImageView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:gravity="center_horizontal"
        android:src="@drawable/logo2"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/lila"
        android:textSize="37sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="252dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:radius="20dp"
        android:text="@string/login"
        android:textColor="@color/background"
        android:textSize="18sp"
        app:backgroundTint="@color/lila"
        app:cornerRadius="20dp" />

    <TextView
        android:id="@+id/txtHaveAccount"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="215dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/question"
        android:textColor="@color/lila"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="162dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:radius="20dp"
        android:text="@string/signup"
        android:textColor="@color/background"
        android:textSize="18sp"
        app:backgroundTint="@color/lila"
        app:cornerRadius="20dp" />

    <ImageButton
        android:id="@+id/imgBtnChangeLanguage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="310dp"
        android:layout_marginRight="310dp"
        android:background="@drawable/border_for_lang"
        android:contentDescription="@string/language"
        app:srcCompat="@drawable/language" />

</RelativeLayout>