<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.NewAdFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarSize="6dp">

        <Button
            android:id="@+id/btnChooseCateg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="370dp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:backgroundTint="@color/lila"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_choosing"
            app:iconPadding="6dp"
            app:iconTint="@color/black" />

        <ImageView
            android:id="@+id/imgNewAd"
            android:layout_width="250dp"
            android:layout_height="125dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/new_ad_employer"
            android:layout_marginLeft="75dp" />

        <EditText
            android:id="@+id/txtNewAdTitle"
            android:layout_width="400dp"
            android:layout_height="40dp"
            android:layout_marginTop="190dp"
            android:background="@drawable/border_for_inputs"
            android:ems="10"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="top"
            android:layout_marginLeft="1dp"
            android:hint="@string/adTitlePlaceholder"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTxtNewAdDescription"
            android:layout_width="400dp"
            android:layout_height="40dp"
            android:layout_marginTop="260dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/border_for_inputs"
            android:ems="10"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="start|top"
            android:hint="@string/adDescriptionPlaceholder"
            android:inputType="textMultiLine"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTxtNewAdPeopleNeeded"
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:layout_marginTop="440dp"
            android:background="@drawable/border_for_inputs"
            android:ems="10"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="top"
            android:layout_marginLeft="1dp"
            android:hint="@string/adPeopleNeeded"
            android:inputType="numberSigned"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtNewAdFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="560dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:layout_marginLeft="1dp"
            android:text="@string/adFee"
            android:textColor="@color/lila"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNewAdFeeTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="580dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/adFeeTo"
            android:textColor="@color/lila"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtNewAdFeeFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="580dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/adFeeFrom"
            android:textColor="@color/lila"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTxtNewAdFeeTo"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginStart="315dp"
            android:layout_marginLeft="315dp"
            android:layout_marginTop="583dp"
            android:background="@drawable/border_for_inputs"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/adFeePlaceholder"
            android:inputType="numberSigned"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTxtNewAdFeeFrom"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginStart="145dp"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="583dp"
            android:background="@drawable/border_for_inputs"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/adFeePlaceholder"
            android:inputType="numberSigned"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNewAdAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="630dp"
            android:text="@string/newAdAdd"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:backgroundTint="@color/lila"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_add_new_ad"
            app:iconPadding="6dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/btnNewAdCancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="630dp"
            android:text="@string/newAdCancel"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:backgroundTint="@color/background"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_cancle_new_add"
            app:iconTint="@color/black" />

        <Spinner
            android:id="@+id/spinnerLocation"
            android:layout_width="304dp"
            android:layout_height="45dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="500dp"
            android:background="@drawable/border_for_inputs"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/imgMaps"
            android:layout_width="50dp"
            android:layout_height="37dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="500dp"
            android:src="@drawable/maps"
            app:tint="@color/lila" />

        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="330dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/filterCategories"
            android:textColor="@color/lila"
            android:layout_marginLeft="1dp"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCategoryList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="331dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:inputType="textMultiLine"
            android:scrollbarSize="3dp"
            android:scrollbars="vertical"
            android:textColor="@color/lila"
            android:textSize="20sp"
            android:verticalScrollbarPosition="right" />

    </RelativeLayout>

</FrameLayout>