<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.NewAdActivityV2">

    <ImageView
        android:id="@+id/imgNewAd"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/new_ad_employer" />

    <EditText
        android:id="@+id/txtNewAdTitle"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="425dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_regular"
        android:gravity="top"
        android:hint="@string/adTitlePlaceholder"
        android:inputType="textPersonName"
        android:textColor="@color/lila"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTxtNewAdDescription"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_regular"
        android:gravity="start|top"
        android:hint="@string/adDescriptionPlaceholder"
        android:inputType="textMultiLine"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTxtNewAdPeopleNeeded"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="410dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_regular"
        android:gravity="top"
        android:hint="@string/adPeopleNeeded"
        android:inputType="numberSigned"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtNewAdFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="225dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/adFee"
        android:textColor="@color/lila"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNewAdFeeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="190dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/adFeeTo"
        android:textColor="@color/lila"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtNewAdFeeFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginBottom="190dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/adFeeFrom"
        android:textColor="@color/lila"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTxtNewAdFeeTo"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="315dp"
        android:layout_marginLeft="315dp"
        android:layout_marginBottom="190dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/adFeePlaceholder"
        android:inputType="number"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTxtNewAdFeeFrom"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginBottom="190dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/adFeePlaceholder"
        android:inputType="number"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnNewAdAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="55dp"
        android:text="@string/newAdAdd"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:backgroundTint="@color/lila"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_add_new_ad"
        app:iconPadding="6dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btnNewAdCancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnNewAdAdd"
        android:layout_alignRight="@+id/btnNewAdAdd"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="55dp"
        android:text="@string/newAdCancel"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:backgroundTint="@color/background"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_cancle_new_add"
        app:iconTint="@color/black" />

    <ImageButton
        android:id="@+id/imgBtnIncrementEmployees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:layout_marginBottom="285dp"
        android:layout_toEndOf="@+id/editTxtNewAdPeopleNeeded"
        android:layout_toRightOf="@+id/editTxtNewAdPeopleNeeded"
        android:background="@color/background"
        android:src="@drawable/plus" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/spinnerLocation"
        android:layout_marginTop="570dp"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:background="@color/white"/>

</RelativeLayout>